updated chat css and js, changed createCourse to lzcompress the image before hand, as well as genterating it as well, now it's much faster but on devices with less proccesing power this might be an issue, updated the createCourse api to work with the new image proccesing implementation, cleaned up some white space in a utils function,

--- a/Teachly - 0.2.1/public/css/chat.css
+++ b/Teachly - 0.2.1/public/css/chat.css
@@ -1,186 +1,107 @@
-.nav-popup {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    background-color: #ffffff;
-    display: none;
+.nav-list {
+  list-style-type: none;
+  text-align: center;
+  padding: 0px;
+  padding-top: 10px;
+}
+
+.nav-li {
+  list-style-type: none;
+  text-align: center;
+}
+
+.circle-icon {
+  background: #ffc0c0;
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 0px;
+  vertical-align: middle;
+  padding: -5px;
+  margin-left: 10px;
+}
+
+.profile-img {
+  width: 47px !important;
+  height: 47px !important;
+  border-radius: 50% !important;
+}
+
+#notifications-popup {
+  height: 360px;
+  width: 280px;
+  border-width: 5px;
+  border-bottom-width: 20px;
+}
+
+#chat {
+  border-radius: 5px;
+  height: 89vh;
+  min-width: 300px;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  max-width: 500px;
+}
+
+#chat-profile {
+  background-color: #212529;
+}
+
+#chat-col {
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-style: solid;
+  border-width: 0px;
+  border-bottom-width: 20px;
+  border-top-width: 20px;
+  border-color: #212529;
+
+}
+
+#rooms {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-style: solid;
+  border-width: 0px;
+  border-bottom-width: 20px;
+  border-top-width: 20px;
+  border-color: #212529;
+  border-radius: 5px;
+  height: 89vh;
+  min-width: 300px;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  max-width: 500px;
+
+}
+
+#chat::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
+#rooms::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
+@media only screen and (max-width: 460px) {
+  .dispr-mx-442p {
     visibility: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    text-align: left;
-    overflow: auto;
-    -ms-overflow-style: none;
-    /* Internet Explorer 10+ */
-    scrollbar-width: none;
-    /* Firefox */
-    font-size: 20px;
-    border-radius: 10px;
-    webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    border-style: solid;
-    border-color: white;
-    border-width: 20px;
-  }
-
-  .nav-popup::-webkit-scrollbar {
     display: none;
   }
-
-  #language-popup {
-    width: 200px;
-    height: 400px;
-    list-style-type: none;
-  }
-
-  #currency-popup {
-    width: 150px;
-    height: 400px;
-    padding: 0px !important;
-  }
-
-  .navbar {
-    position: relative;
-    background: black;
-    width: 100%;
-    padding: 0px;
-    margin: 0px;
-    margin-bottom: 20px;
-    height: 60px;
-    z-index: 9999;
-  }
-
-  .nav-list {
-    list-style-type: none;
-    text-align: center;
-    padding: 0px;
-    padding-top: 10px;
-  }
-
-  .nav-li {
-    list-style-type: none;
-    text-align: center;
-  }
-
-  #profile-buttons {
-    height: 50px;
-    text-align: center;
-    float: right;
-  }
-
-  .nav-popup {
-    width: 250px;
-    height: auto;
-    border-radius: 2%;
-    padding: 5px;
-    visibility: hidden;
-    background: black;
-    border-color: black;
-    border-width: 20px;
-    position: absolute;
-    top: 65px;
-    right: 5px;
-    text-align: left;
-  }
-
-  .popup-link {
-    width: 100%;
-    height: 60px;
-    margin: auto;
-    padding: 5px;
-    font-size: 18px;
-    vertical-align: middle;
-  }
-
-  .navlist-list {
-    height: 200px;
-  }
-
-  .navlist-list li {
-    width: 100%;
-    font-size: 18px;
-    margin: 10px;
-    height: 50px;
-    line-height: 18px;
-    list-style-type: none;
-  }
-
-  .circle-icon {
-    background: #ffc0c0;
-    width: 47px;
-    height: 47px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 0px;
-    vertical-align: middle;
-    padding: -5px;
-    margin-left: 10px;
-  }
-
-  .profile-img {
-    width: 47px !important;
-    height: 47px !important;
-    border-radius: 50% !important;
-  }
-
-  #notifications-popup {
-    height: 360px;
-    width: 280px;
-    border-width: 5px;
-    border-bottom-width: 20px;
-  }
-
-  @media only screen and (max-width: 460px) {
-    .dispr-mx-442p {
-      visibility: hidden;
-      display: none;
-    }
-  }
-
-  @media only screen and (min-width: 460px) {
-    .dispr-mn-442p {
-      visibility: hidden;
-      display: none;
-    }
-  }
-
-  .icon-signaler {
-    position: absolute;
-    background: radial-gradient(#abb5d3, #909fcc, #546ac2, #2432c5, #1825b7);
-    border-radius: 45%;
-    width: 18px;
-    height: 18px;
-    margin-left: 40px;
-    margin-top: -5px !important;
-    padding: 0px;
-    display: none;
-  }
-
-  #notifications-list {
-    height: 300px !important;
-    overflow-y: auto;
-    overflow-x: hidden;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-
-  #notifications-list::-webkit-scrollbar {
-    display: none;
-  }
-
-  .border-top-light {
-    border-top: 1px solid rgb(255, 255, 255);
-    padding-top: 8px;
-  }
-
-  .color-white {
-    color: #ffffff;
-  }
-
-  #profile-popup {
-    height: 410px;
-  }
+}
